# InTuneAI

./: .dockerignore  .gitignore  .pre-commit-config.yaml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
infra/: Pulumi.dev.yaml  Pulumi.yaml  README.md  __main__.py  deploy-intune-ai.sh  deploy.sh
services/: Dockerfile  main.py  pyproject.toml  requirements.txt
